# semantic-kinematics-mcp

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
semantic_kinematics/: __init__.py  __main__.py  config.py
semantic_kinematics/embeddings/: __init__.py  base.py  lmstudio.py  nv_embed_adapter.py  sentence_transformers_adapter.py
semantic_kinematics/mcp/: __init__.py  server.py  state_manager.py
semantic_kinematics/mcp/commands/: __init__.py  classification.py  embeddings.py  model.py  trajectory.py
semantic_kinematics/ui/: __init__.py  app.py  state.py
semantic_kinematics/ui/tabs/: __init__.py
semantic_kinematics/ui/tabs/drift/: __init__.py  handlers.py  ui.py
semantic_kinematics/ui/tabs/trajectory/: __init__.py  handlers.py  ui.py
semantic_kinematics/utils/: __init__.py  html_extract.py  text_cleaning.py  timestamps.py
